модель прокинута в qml

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -11,12 +11,16 @@
  set(CMAKE_CXX_STANDARD 20)
  set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
- find_package(QT NAMES Qt6 Qt5 COMPONENTS Core Quick LinguistTools REQUIRED)
- find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core Quick LinguistTools REQUIRED)
+ find_package(QT NAMES Qt6 Qt5 COMPONENTS Core Quick Sql LinguistTools REQUIRED)
+ find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core Quick Sql LinguistTools REQUIRED)
 
  set(PROJECT_SOURCES
          inc/core.hpp
+         inc/model.h
          src/core.cpp
+         src/model.cpp
+         inc/database.h
+         src/database.cpp
  )
 
 add_library(${PROJECT_NAME} STATIC
@@ -31,4 +35,5 @@ target_link_libraries(${PROJECT_NAME}
     PUBLIC
     Qt5::Core
     Qt5::Quick
+    Qt5::Sql
 )
